# Web-Dev-Notes

./: README.md
02-PROJECT/: main.py  pyproject.toml
02-PROJECT/frontend/: package-lock.json  package.json
02-PROJECT/frontend/src/: App.jsx  Get.jsx  Post.jsx
03-PROJECT/backend/: main.py  pyproject.toml
03-PROJECT/frontend/: base.html  index.html
03-PROJECT/frontend/pages/: about.html  home.html
03-PROJECT/frontend/static/: navbar.html
03-PROJECT/frontend/static/css/: about.css  home.css
EXPRESS/: index.js  package-lock.json  package.json
EXPRESS/public/: about.html
EXPRESS/views/: home.ejs
FastAPI-App/: README.md  main.py  pyproject.toml
FastAPI-Learning/: README.md  main.py  pyproject.toml
JAVASCRIPT/: 20-exc11.js  file.txt  sing.js
JINJA/: main.py  pyproject.toml
JINJA/templates/: index.html.jinja  language.html.jinja
REACT/: README.md  package-lock.json
REACT/src/: App.jsx
REACT/src/01_project/components/: Main.css  Main.jsx  Navigation.css  Navigation.jsx
SOLID/: package-lock.json  package.json
SOLID/src/: App.jsx  App.module.css
